Fixing layout issues and adding link to print

--- a/print.scss
+++ b/print.scss
@@ -94,6 +94,11 @@ body {
                         break-inside: avoid;
                         li {
                             margin: 5px 0;
+
+                            &.print {
+                                display: none;
+                            }
+                            
                             &.site {
                                 display: block;
                             }
