--- a/style.scss
+++ b/style.scss
@@ -68,6 +68,7 @@ body {
                     }
     
                     h1 {
+                        font-size: 1.2em;
                         margin-bottom: 0;
                         padding-bottom: 5px;
                         border-bottom: 1px solid white;
@@ -75,6 +76,7 @@ body {
                     }
                     
                     h2 {
+                        font-size: 1.2em;
                         margin-top: 5px;
                         font-weight: 100;
                         text-transform: uppercase;
@@ -109,6 +111,11 @@ body {
                         padding: 0;
                         li {
                             margin: 10px 0;
+
+                            &.print {
+                                display: block;
+                            }
+                            
                             &.site {
                                 display: none;
                             }
@@ -180,6 +187,7 @@ body {
             
                                 .date {
                                     color: $primary-color;
+                                    flex: 0 0 auto;
                                 }
                             }
                         }
